# fast-pipe

./: README.md  pyproject.toml
tests/: test_fast_pipe.py
